# personal-website

./: .dockerignore  .env.dist  .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG  Dockerfile  README.md  TODO.md  Taskfile.yml  compose.yaml  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.codeassistant/commands/: pr-description.md
.github/: issue_template.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  issue_template.md  запрос-на-функцию.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/actions/: setup-steps.yml
.github/workflows/: build.yml  deploy.yml  publish-image.yml  publish.yml  release.yml  reusable-steps.yml  test-compose.yml  test-python.yml  test.yml
.sourcecraft/: ci.yaml
.zed/: settings.json
apps/accounts/: apps.py  signals.py
apps/blog/: admin.py  forms.py  urls.py  views.py
apps/blog/migrations/: 0001_initial.py
apps/blog/templates/: article_detail.html  blog_index.html
apps/main/: views.py
apps/main/templates/: base.html  main.html
apps/scripts/: admin.py  apps.py  decorators.py  models.py  urls.py  utils.py  views.py
apps/scripts/migrations/: 0001_initial.py
apps/scripts/templates/: executions.html  jobs.html
config/: gunicorn.service  nginx.conf  settings.py  urls.py
config/settings/: __init__.py  apps.py  base.py  databases.py  deploy.py  email.py  logging.py  paths.py  secrets.py  templates.py  tinymce.py
docs/: AGENTS.md  CHANGELOG  CHANGELOG.md  CONTRIBUTING.md  README.md
docs/diagrams/src/: actions.puml  container.puml  context.puml
gunicorn/: gunicorn.service
mysite/: db.sqlite3
mysite/main/: admin.py  models.py  urls.py
mysite/main/migrations/: 0001_initial.py
mysite/mysite/: settings.py  urls.py
nginx/: Dockerfile  certbot.sh  nginx.conf
nginx/templates/: default.conf.template
personal_website/: Dockerfile  conftest.py  entrypoint.sh  manage.py
personal_website/accounts/: apps.py  factories.py  forms.py  signals.py  urls.py  utils.py  views.py
personal_website/accounts/tests/: test_factories.py  test_forms.py  test_views.py  utils.py
personal_website/blog/: admin.py  apps.py  factories.py  forms.py  managers.py  models.py  sitemaps.py  tests.py  urls.py  views.py
personal_website/blog/migrations/: 0001_initial.py  0002_rename_category_article_categories_and_more.py  0003_alter_article_modified_alter_article_published.py  0004_alter_article_slug_alter_category_slug_and_more.py  0005_alter_article_published.py  0006_alter_article_options_and_more.py  0007_alter_article_options_alter_category_options_and_more.py
personal_website/blog/tests/: test_admin.py  test_factories.py  test_forms.py  test_models.py  test_sitemaps.py  test_views.py  utils.py
personal_website/config/: settings.py
personal_website/config/gunicorn/: gunicorn.service
personal_website/config/tests/: test_environment.py  test_storages.py  test_utils.py
personal_website/gallery/: admin.py  apps.py  conftest.py  factories.py  forms.py  managers.py  mixins.py  models.py  schemas.py  sitemaps.py  urls.py  utils.py  views.py
personal_website/gallery/migrations/: 0001_initial.py  0002_alter_photo_image.py  0003_alter_album_cover.py  0004_alter_album_options_rename_created_album_created_at_and_more.py  0005_alter_album_options_album_order.py  (+2 more)
personal_website/main/: apps.py  tests.py  urls.py  views.py
personal_website/personal_website/: asgi.py  managers.py  runners.py  settings.py  storages.py  urls.py  utils.py  wsgi.py
personal_website/project/: settings.py  storages.py
personal_website/scripts/: backup_database.py  backup_storage.py  cronjobs.sh  pgbackup.sh  pgrestore.sh  restore_database.py  runtests.sh  s3backup.sh  s3restore.sh  storagesync.sh
personal_website/static/: .gitignore  robots.txt
personal_website/staticfiles/: robots.txt  site.webmanifest
personal_website/templates/: base.html  messages.html  navbar.html  pagination.html  title.html
personal_website/utils/: __init__.py  format.py  log.py  setup.py
root/: README.md  db.sqlite3  manage.py
root/accounts/: README.md  forms.py  views.py
root/blog/: README.md  admin.py  apps.py  forms.py  models.py  sitemaps.py  urls.py  views.py
root/config/: settings.py  urls.py
root/core/: README.md  asgi.py  portfolio_optimisation.py  settings.py  urls.py  wsgi.py
root/home/: apps.py  urls.py  views.py
root/invest/: portfolio_optimisation.py  urls.py  views.py
root/main/: README.md  urls.py  views.py
root/optimisation/: apps.py  urls.py  views.py
root/scripts/: README.md  admin.py  apps.py  models.py  scheduler.py  urls.py  views.py
root/staticfiles/: README.md  package-lock.json  package.json  staticfiles.json
root/templates/: README.md  base.html  bootstrap.html  favicon.html  header.html  portfolio_optimisation.html
scripts/: add_cron_jobs.sh  backup_database.py  backup_storage.py  configure_nginx.sh  create_gunicorn.sh  make_link.sh  restart_services.sh  restore_database.py  run_server.sh  run_tests.sh  update_project.sh
static/: node_modules  robots.txt
templates/blog/: article_detail.html  blog_index.html
templates/main/: base.html  main.html
templates/registration/: login.html  password_reset_form.html
templates/scripts/: executions.html  executions_table.html  job_detail.html  jobs.html
tests/: test-env.js  test-modules.js  test_database.py  test_env.py  test_environment.py  test_minio.py  test_nginx.py  test_packages.py  test_postgres.py  test_static.py  test_storage.py
tools/: add_cron_jobs.sh  checkout.sh  commit.sh  cronjobs.sh  deploy.sh  graph-models.sh  install_dependencies.sh  make_link.sh  makelink.sh  pg-isready.sh  pull_changes.sh  push_changes.sh  push_commit.sh  restart.sh  restore_database.py  run_server.sh  run_tests.sh  runtests.sh  sync-branch.sh  update.sh  update_project.sh
tools/docker/: deploy.sh  restart.sh  update.sh
tools/server/: deploy.sh  makelink.sh  restart.sh  update.sh
utils/: add_cron_jobs.sh  run_scheduler.sh  run_server.sh  update_server.sh
(+155 files in other folders)
