[tool.poetry]
name = "personal-website"
version = "0.1.0"
description = "My personal website"
authors = ["Mikhail Polyakov <mikhpo@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.7"
django-tinymce = "^3.6.1"
django-cleanup = "^8.0.0"
django-imagekit = "^5.0.0"
django-admin-sortable2 = "^2.1.10"
django-extensions = "^3.2.3"
django-crispy-forms = "^2.1"
crispy-bootstrap5 = "^2023.10"
whitenoise = "^6.6.0"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.0"
pytils = "^0.4.1"
pillow = "^10.1.0"
imgkit = "^1.2.3"
psycopg = {extras = ["binary"], version = "^3.1.12"}
faker = "^20.1.0"
faker-file = "^0.17.11"
model-bakery = "^1.17.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.3.2"
black = "^23.10.1"
isort = "^5.12.0"
djlint = "^1.34.0"
pytest = "^7.4.3"
pytest-subtests = "^0.11.0"
pytest-django = "^4.6.0"
pytest-cov = "^4.1.0"
pyclean = "^2.7.6"

[tool.isort]
profile = "django"
src_paths = ["personal_website"]

[tool.djlint]
ignore="H006,H013"

[tool.pytest.ini_options]
pythonpath = "personal_website"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
DJANGO_SETTINGS_MODULE = "personal_website.settings"
testpaths = "personal_website"

[tool.coverage.run]
branch = true

[tool.coverage.report]
omit = ["*/tests/*", "*/tests.py", "*/__init__.py", "*/migrations/*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
